--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                     <p href="#" title="" class="relative inline-flex items-center justify-center px-8 py-3 text-base font-normal text-white bg-black border border-transparent rounded-full" > #навигация </p>
                                 </div>
 
-                                <div class="relative inline-flex items-center justify-center mt-8 m-2 group">
+                                <div class="relative inline-flex items-center justify-center m-2 group">
                                     <div class="absolute transition-all duration-200 rounded-full -inset-px bg-gradient-to-r from-pink-500 via-red-500 to-yellow-500"></div>
                                     <p href="#" title="" class="relative inline-flex items-center justify-center px-8 py-3 text-base font-normal text-white bg-black border border-transparent rounded-full" > #удобство использования </p>
                                 </div>
@@ -146,7 +146,7 @@
                     <div class="overflow-hidden bg-gradient-to-r from-pink-400 to-pink-600 rounded-lg p-1">
                         <div class="px-7 py-9 bg-black back w-full h-full rounded-md">
                             <div class="flex items-center">
-                                <h3 class="text-6xl font-bold lg:text-7xl xl:text-7xl">
+                                <h3 class="text-4xl font-bold lg:text-7xl xl:text-7xl">
                                     <span class="text-transparent bg-clip-text bg-gradient-to-r from-pink-400 to-pink-600" style="font-family: 'Comfortaa';">Веб разработка</span>
                                 </h3>
                             </div>
@@ -192,7 +192,7 @@
                     <div class="overflow-hidden bg-gradient-to-r from-rose-400 via-fuchsia-500 to-indigo-500 rounded-lg p-1 lg:col-span-2 xl:col-span-2">
                         <div class="px-7 py-9 bg-black back w-full h-full rounded-md">
                             <div class="flex items-center">
-                                <h3 class="text-6xl font-bold lg:text-7xl xl:text-7xl">
+                                <h3 class="text-4xl font-bold lg:text-7xl xl:text-7xl">
                                     <span class="text-transparent bg-clip-text bg-gradient-to-r from-rose-400 via-fuchsia-500 to-indigo-500" style="font-family: 'Comfortaa';">Дизайн презентаций</span>
                                 </h3>
                             </div>
